--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -8,7 +8,7 @@ author:
 thanks: "Code and data are available at: [https://github.com/AndyYanxunJiang/president-polls)."
 date: today
 date-format: long
-abstract: "The 2024 U.S. presidential election is shaping up to be a highly competitive race, with polling data playing a crucial role in gauging public sentiment and forecasting the potential outcome. This paper aims to build a predictive model using a poll-of-polls approach, aggregating data from multiple pollsters to forecast the winner of the upcoming election. The analysis incorporates polling data from various sources, filtered to include only high-quality pollsters with a numeric grade above 3, to ensure the reliability of the predictions. Additionally, a detailed examination of one selected pollster’s methodology is conducted, highlighting strengths, weaknesses, and biases in the survey process. The paper concludes with an idealized polling methodology, designed within a $100K budget, to enhance the accuracy of election forecasts. Results are presented in the context of understanding polling trends, potential biases, and the evolving landscape of voter preferences as the election approaches."
+abstract: "The 2024 U.S. presidential election is shaping up to be a highly swing race, with polling data playing a crucial role in gauging public sentiment and forecasting the potential outcome. This paper aims to build a predictive model using a poll-of-polls approach, aggregating data from multiple pollsters to forecast the winner of the upcoming election. The analysis incorporates polling data from various sources, filtered to include only high-quality pollsters with a numeric grade above 3, to ensure the reliability of the predictions. Additionally, a detailed examination of one selected pollster’s methodology is conducted, highlighting strengths, weaknesses, and biases in the survey process. The paper concludes with an idealized polling methodology, designed within a $100K budget, to enhance the accuracy of election forecasts. Results are presented in the context of understanding polling trends, potential biases, and the evolving landscape of voter preferences as the election approaches."
 format: pdf
 number-sections: true
 bibliography: references.bib
@@ -35,7 +35,7 @@ The 2024 U.S. presidential election is shaping up to be one of the most closely 
 
 This paper aims to forecast the outcome of the 2024 U.S. presidential election by leveraging a "poll-of-polls" approach, which aggregates data from various pollsters to create a more comprehensive picture of the race. By focusing on high-quality polls and conducting a detailed analysis of the polling trends for the two main candidates, Donald Trump and Kamala Harris, we seek to uncover patterns in voter support and potential factors influencing shifts in public opinion. Additionally, the paper examines the methodologies of different pollsters to assess their strengths and weaknesses, which can help identify possible biases in the aggregated data.
 
-The analysis will further explore the geographic distribution of support across key battleground states, providing insights into the electoral landscape. Finally, the paper presents an idealized polling methodology with a $100,000 budget, designed to improve the accuracy and representativeness of election forecasts. By integrating multiple data sources and critically evaluating polling practices, this study aims to contribute to the ongoing discussion on the role of polling in democratic processes and election forecasting.
+The analysis will further explore the geographic distribution of support across key swing states, providing insights into the electoral landscape. Finally, the paper presents an idealized polling methodology with a $100,000 budget, designed to improve the accuracy and representativeness of election forecasts. By integrating multiple data sources and critically evaluating polling practices, this study aims to contribute to the ongoing discussion on the role of polling in democratic processes and election forecasting.
 
 
 
@@ -62,11 +62,17 @@ Add graphs, tables and text. Use sub-sub-headings for each outcome variable or u
 # Set seed for reproducibility
 set.seed(316)
 
-sample_data <- data %>% sample_n(10)
+# Sample 10 random observations from the filtered data with Trump and Harris
+sample_data <- data %>%
+  filter(candidate_name %in% c("Donald Trump", "Kamala Harris")) %>%
+  sample_n(10)
 
-# Display the sampled data as a table with smaller text
+# Display the sampled data as a table with smaller text and adjusted column spacing
 kable(sample_data, caption = "Sample of 10 Random Observations from the Analysis Data") %>%
-  kable_styling(font_size = 8)  # Adjust the font size as needed
+  kable_styling(font_size = 8, full_width = FALSE) %>%  # Set full_width to FALSE to center the table
+  column_spec(1:ncol(sample_data), width = "2cm")  # Adjust width as needed, here set to 2cm per column
+
+
 ```
 
 
@@ -95,50 +101,128 @@ kable(sample_data, caption = "Sample of 10 Random Observations from the Analysis
 
 
 # Results
+The analysis of polling data across key swing states for the 2024 U.S. Presidential Election reveals insights into the levels of support for candidates Donald Trump and Kamala Harris. The findings are presented through three primary visualizations: the average polling percentage by state, the distribution of polling percentages, and the difference in average polling percentage between the two candidates.
 
+## Average Polling Percentage by State
+From @fig-1, we can see that in the swing states of Arizona, Georgia, and North Carolina, Trump holds a narrow lead. In contrast, Harris leads in Pennsylvania, Wisconsin, Nevada, and Michigan. When looking at the overall average across these states, Harris slightly edges out Trump, indicating her overall advantage in these swing areas.
+
+## Polling Percentage Distribution
+The box plot in @fig-2 demonstrates the range and consistency of support for both candidates across each state. Trump shows a wider range of support, reflecting variability, while Harris has relatively steady polling percentages across states, maintaining higher consistency. Harris’s support is less variable and generally centers around higher polling percentages compared to Trump’s.
+
+## Difference in Average Polling Percentage
+@fig-3 highlights the difference in average polling percentages by state, with positive values indicating Trump’s lead and negative values indicating Harris's. Trump’s lead in the three states (Arizona, Georgia, and North Carolina) is relatively narrow, with margins of less than 1 percent. In contrast, Harris’s lead in the states favoring her (Pennsylvania, Wisconsin, Nevada, and Michigan) ranges from 1 to 4 percent, indicating her stronger support in the states where she leads.
 
 ```{r}
+#| label: fig-1
+#| fig-cap: "Average Polling Percentage by State"
 #| echo: false
 #| warning: false
 #| message: false
-data_filtered <- data %>% filter(candidate_name %in% c("Donald Trump", "Kamala Harris"))
-
-# Now proceed with calculating the average polling percentage by state
-data_avg <- data_filtered %>%
+# Calculate the average polling percentage by state for Trump and Harris
+data_avg <- data %>%
+  filter(candidate_name %in% c("Donald Trump", "Kamala Harris")) %>%
   group_by(state, candidate_name) %>%
-  summarize(avg_pct = mean(pct, na.rm = TRUE))
+  summarize(avg_pct = mean(pct, na.rm = TRUE), .groups = "drop")
 
-# Plotting the average polling percentages by state
-ggplot(data_avg, aes(x = reorder(state, avg_pct), y = avg_pct, fill = candidate_name)) +
-  geom_bar(stat = "identity", position = "dodge") +
+# Calculate the overall average polling percentage for Trump and Harris
+overall_avg <- data %>%
+  filter(candidate_name %in% c("Donald Trump", "Kamala Harris")) %>%
+  group_by(candidate_name) %>%
+  summarize(avg_pct = mean(pct, na.rm = TRUE)) %>%
+  mutate(state = " Overall")  # Add a space before "Overall" to separate it visually
+
+# Combine state-level data with overall average
+combined_data <- bind_rows(data_avg, overall_avg)
+
+# Ensure "Overall" appears at the bottom with spacing
+combined_data$state <- factor(combined_data$state, levels = c(setdiff(unique(combined_data$state), " Overall"), " Overall"))
+
+# Plot the average polling percentages by state with overall comparison
+ggplot(combined_data, aes(x = state, y = avg_pct, fill = candidate_name)) +
+  geom_bar(stat = "identity", position = position_dodge(width = 0.8), aes(color = ifelse(state == " Overall", "Overall", "State")), width = 0.6) + 
+  scale_color_manual(values = c("Overall" = "black", "State" = NA), guide = "none") +  # Add dark grey outline for "Overall" bars
+  scale_fill_manual(values = c("Donald Trump" = "#F8766D", "Kamala Harris" = "#56B4E9")) +  # Custom colors for consistency
   labs(title = "Average Polling Percentages by State",
-       subtitle = "Comparing Support for Trump and Harris Across States",
        x = "State",
        y = "Average Polling Percentage",
        fill = "Candidate") +
   coord_flip() +  # Flip coordinates for easier reading
-  theme_minimal()
+  theme_minimal() +
+  theme(
+    legend.position = "bottom",
+    axis.text.y = element_text(margin = margin(r = 10)), # Add spacing to y-axis labels
+    panel.grid.major.y = element_blank(), # Remove y-axis gridlines for clarity
+    panel.spacing = unit(1, "lines") # Increase panel spacing
+  )
+
+
 ```
 
 ```{r}
-
+#| label: fig-2
+#| fig-cap: "Polling Percentage Distribution"
+#| echo: false
+#| warning: false
+#| message: false
+ggplot(data %>% filter(candidate_name %in% c("Donald Trump", "Kamala Harris")), 
+       aes(x = state, y = pct, fill = candidate_name)) +
+  geom_boxplot(alpha = 0.7) +
+  labs(title = "Polling Percentage Distribution by State",
+       x = "State",
+       y = "Polling Percentage",
+       fill = "Candidate") +
+  scale_fill_manual(values = c("Donald Trump" = "#F8766D", "Kamala Harris" = "#56B4E9")) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1)
+  )
 ```
+```{r}
+#| label: fig-3
+#| fig-cap: "Difference in Average Polling Percentage"
+#| echo: false
+#| warning: false
+#| message: false
+data_diff <- data %>%
+  filter(candidate_name %in% c("Donald Trump", "Kamala Harris")) %>%
+  group_by(state) %>%
+  summarize(diff_pct = mean(pct[candidate_name == "Donald Trump"], na.rm = TRUE) - 
+                      mean(pct[candidate_name == "Kamala Harris"], na.rm = TRUE), .groups = "drop")
+
+ggplot(data_diff, aes(x = reorder(state, diff_pct), y = diff_pct, fill = diff_pct > 0)) +
+  geom_bar(stat = "identity", color = "darkgrey") +
+  scale_fill_manual(values = c("TRUE" = "#F8766D", "FALSE" = "#56B4E9"), 
+                    labels = c("Kamala Harris", "Donald Trump")) +
+  labs(title = "Difference in Average Polling Percentage by State",
+       x = "State",
+       y = "Difference in Polling Percentage",
+       fill = "Lead") +
+  coord_flip() +
+  theme_minimal() +
+  theme(legend.position = "bottom")
+```
+
+
 
 
 
 
 # Discussion
 
-## First discussion point {#sec-first-point}
+## Impact of Key Demographics and Policy Appeals
+Harris’s lead in several swing states may be influenced by her campaign’s appeal to key demographic groups, particularly immigrants. The Democratic platform has emphasized social and economic benefits for immigrant communities, which may have strengthened her base in states with significant immigrant populations. Policies that promise support for healthcare, education, and other public services are likely contributing to Harris’s appeal among these groups, solidifying her lead in states like Nevada and Michigan. This demographic support provides Harris with a strategic advantage, as these communities may play a crucial role in voter turnout and loyalty.
 
+## Influence of Endorsements and High-Profile Backing
+Recently, high-profile figures like Elon Musk have publicly backed Trump, using their influence to mobilize support for his campaign. Musk’s endorsement may energize Trump’s voter base, especially among his followers and individuals interested in business and technology. This kind of visible support from influential figures could affect last-minute voter decisions, particularly in tightly contested states where Trump’s lead is slim. If Musk’s endorsement translates into increased campaign funding or social media influence, it could bolster Trump’s standing in swing states where the margin remains close, potentially altering the final outcome on November 5th.
 
+## Limitations of the Analysis: Focus on Swing States
+While the analysis focuses on key swing states, it does not consider the broader national picture, which includes states with clear, one-sided advantages for either candidate. This narrowed focus on swing states provides insights into swing areas but does not give a complete picture of the national landscape. Therefore, while Harris appears to have an edge in these swing states, it is unclear whether she is leading overall. The situation in solidly red or blue states could still shift the electoral balance, meaning Trump could potentially gain ground through strong performances in traditionally Republican states.
 
-## Second discussion point
+## Potential Influence of Late Campaign Efforts
+With a few days remaining before the election, both campaigns are likely to intensify their outreach efforts, particularly in swing states. Trump’s recent increase in targeted advertisements and campaign rallies in swing states could energize his supporters, narrowing Harris’s lead. On the other hand, Harris’s campaign may focus on mobilizing key demographics, such as young and minority voters, to secure her advantage. Late-breaking events, public debates, or controversies could sway undecided voters and ultimately impact the election results in these states.
 
-
-## Third discussion point
-
-## Weaknesses and next steps
+## Limitations and Next Steps
+This analysis is limited to examining current polling data in swing states and does not account for unexpected shifts in voter sentiment or turnout on election day. Additionally, focusing exclusively on swing states omits the influence of non-swing states that may still play a role in the electoral vote tally. Future analyses could incorporate national polling data to provide a more comprehensive perspective and examine demographic breakdowns within each state to understand which groups are driving support for each candidate. Integrating data on recent campaign activities, endorsements, and voter sentiment on pressing issues could also improve the predictive accuracy of election outcomes.
 
 
 \newpage
@@ -163,7 +247,7 @@ Sampling Methodology Employed by New York Times and Siena College:
 
 Sampling Approach: Stratified Sampling
 
-Method: Stratified sampling is used, where different voter groups are targeted based on their demographic and regional characteristics. For battleground state polls, the sample is drawn from states likely to decide the election, such as Arizona, North Carolina, Georgia, and Pennsylvania.
+Method: Stratified sampling is used, where different voter groups are targeted based on their demographic and regional characteristics. For swing state polls, the sample is drawn from states likely to decide the election, such as Arizona, North Carolina, Georgia, and Pennsylvania.
 
 Trade-offs: While phone polling allows for broad geographic reach and is quick to execute, it faces declining response rates and potential underrepresentation of certain groups. The reliance on phone surveys limits the ability to reach voters without reliable phone access, and it may inadvertently bias results towards those who are more reachable by phone.
 
@@ -196,7 +280,7 @@ The questionnaire is kept relatively short (under 15 minutes), helping to reduce
 
 Assumption 1:  Nation-level Popular Vote is irrelevant in our methodology since president electors are chosen based on electoral votes. 
 
-Assumption 2:  Based on historical and polling data, some states’ electoral votes are predetermined as either Democrat or Republican. Therefore, it is more prudent to shift focus over to swing states where outcomes are uncertain. This assumption is accompanied with the challenge of determining what states qualify as “swing states”. However, on this issue, there is consensus on which states qualify as battleground states. As of 2024, our methodology should direct all our resources to acquiring voting data on the following states (New York Times).
+Assumption 2:  Based on historical and polling data, some states’ electoral votes are predetermined as either Democrat or Republican. Therefore, it is more prudent to shift focus over to swing states where outcomes are uncertain. This assumption is accompanied with the challenge of determining what states qualify as “swing states”. However, on this issue, there is consensus on which states qualify as swing states. As of 2024, our methodology should direct all our resources to acquiring voting data on the following states (New York Times).
 Pennsylvania
 Georgia
 North Carolina
