--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -18,7 +18,7 @@ bibliography: references.bib
 #| include: false
 #| warning: false
 #| message: false
-
+options(repos = c(CRAN = "https://cloud.r-project.org"))
 library(tidyverse)
 library(readr)
 library(here)
@@ -27,6 +27,8 @@ library(kableExtra)
 library(scales)
 install.packages("arrow")
 library(arrow)
+library(bayesplot)
+library(rstanarm)
 
 data <- read_parquet(here::here("data/02-analysis_data/analysis_data.parquet"))
 ```
@@ -397,9 +399,9 @@ However, using snowball sampling in an election survey introduces potential bias
 
 \newpage
 
-# Appendix B
+# Appendix B {-}
 
-##  Idealized Questionnaire and Survey
+#  Idealized Questionnaire and Survey
 
 https://docs.google.com/forms/d/117wC8f1rBW_bd5glEdiR-7823-02A3HiD5EzQuT1GVw/edit
 
@@ -415,7 +417,11 @@ https://docs.google.com/forms/d/117wC8f1rBW_bd5glEdiR-7823-02A3HiD5EzQuT1GVw/edi
 
 
 ```{r}
-
+posterior_predictions <- posterior_predict(model, draws = 100)
+ppc_dens_overlay(y = data_filtered$average_pct/100, yrep = posterior_predictions) +
+  labs(title = "Posterior Predictive Check",
+       x = "Rate of support",
+       y = "Density")
 ```
 
 ## Diagnostics
