--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,51 +1,83 @@
-
-
 @Manual{citeR,
-    title = {{R: A Language and Environment for Statistical Computing}},
-    author = {{R Core Team}},
-    organization = {R Foundation for Statistical Computing},
-    address = {Vienna, Austria},
-    year = {2023},
-    url = {https://www.R-project.org/},
-  }
-  
-  
-@Article{thereferencecanbewhatever,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }  
-  
-  
-@Manual{citeLahman,
-    title = {{Lahman: Sean `Lahman' Baseball Database}},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
-  
-  
-
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2022},
+  url = {https://www.R-project.org/},
+}
+@Article{tidyverse,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686},
+}
+@Manual{readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+  year = {2023},
+  note = {R package version 2.1.4},
+  url = {https://CRAN.R-project.org/package=readr},
+}
+@Manual{here,
+  title = {here: A Simpler Way to Find Your Files},
+  author = {Kirill Müller},
+  year = {2020},
+  note = {R package version 1.0.1},
+  url = {https://CRAN.R-project.org/package=here},
+}
+@Manual{knitr,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Yihui Xie},
+  year = {2024},
+  note = {R package version 1.48},
+  url = {https://yihui.org/knitr/},
+}
+@Manual{kableExtra,
+  title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2024},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=kableExtra},
+}
+@Manual{scales,
+  title = {scales: Scale Functions for Visualization},
+  author = {Hadley Wickham and Thomas Lin Pedersen and Dana Seidel},
+  year = {2023},
+  note = {R package version 1.3.0},
+  url = {https://CRAN.R-project.org/package=scales},
+}
+@Manual{arrow,
+  title = {arrow: Integration to 'Apache' 'Arrow'},
+  author = {Neal Richardson and Ian Cook and Nic Crane and Dewey Dunnington and Romain François and Jonathan Keane and Dragoș Moldovan-Grünfeld and Jeroen Ooms and Jacob Wujciak-Jens and {Apache Arrow}},
+  year = {2024},
+  note = {R package version 17.0.0.1},
+  url = {https://CRAN.R-project.org/package=arrow},
+}
+@Misc{bayesplot,
+  title = {bayesplot: Plotting for Bayesian Models},
+  author = {Jonah Gabry and Tristan Mahr},
+  year = {2024},
+  note = {R package version 1.11.1},
+  url = {https://mc-stan.org/bayesplot/},
+}
 @Misc{rstanarm,
-    title = {{rstanarm: {Bayesian} applied regression modeling via {Stan}}},
-    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
-    year = {2022},
-    url = {https://mc-stan.org/rstanarm/},
-  }
-  
-  
-  
-@book{tellingstories,
-    title = {Telling Stories with Data},
-    author = {Rohan Alexander},
-    year = {2023},
-    publisher = {Chapman; Hall/CRC},
-    url = {https://tellingstorieswithdata.com/}
-  }
+  title = {rstanarm: {Bayesian} applied regression modeling via {Stan}.},
+  author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
+  note = {R package version 2.32.1},
+  year = {2024},
+  url = {https://mc-stan.org/rstanarm/},
+}
+@Article{Zahn2024,
+  title = {What’s at stake for Elon Musk in the presidential election?},
+  author = {Max Zahn},
+  journal = {ABC News},
+  publisher = {ABC News Network},
+  year = {2024},
+  month = {Nov},
+  url = {https://abcnews.go.com/Business/stake-elon-musk-presidential-election/story?id=115143069},
+}
