--- a/paper/references.bib
+++ b/paper/references.bib
@@ -81,3 +81,11 @@
   month = {Nov},
   url = {https://abcnews.go.com/Business/stake-elon-musk-presidential-election/story?id=115143069},
 }
+@Misc{Best2024,
+  title = {National: President: General election: 2024 polls},
+  author = {Ryan Best and Aaron Bycoffe and others},
+  journal = {FiveThirtyEight},
+  year = {2024},
+  month = {Nov},
+  url = {https://projects.fivethirtyeight.com/polls/president-general/2024/national/},
+}
