--- a/paper/references.bib
+++ b/paper/references.bib
@@ -89,3 +89,37 @@
   month = {Nov},
   url = {https://projects.fivethirtyeight.com/polls/president-general/2024/national/},
 }
+
+@Manual{nyt_poll,
+    title = {You Ask, We Answer: How The Times/Siena Poll Is Conducted},
+    author = {{The New York Times}},
+    year = {2024},
+    url = {https://www.nytimes.com/article/times-siena-poll-methodology.html#link-7be11f8b},
+    publisher = {The New York Times}
+}
+
+@Online{kimball_polling,
+    title = {How pollsters have adapted to changing technology and voters who don’t answer the phone},
+    author = {Spencer Kimball and Camille Mumford and Matt Taglia},
+    year = {2024},
+    url = {https://theconversation.com/how-pollsters-have-adapted-to-changing-technology-and-voters-who-dont-answer-the-phone-240283},
+    note = {The Conversation, Emerson College}
+}
+
+@InCollection{psychology_survey_response,
+    title = {The Psychology of Survey Response},
+    author = {Roger Tourangeau, Lance J. Rips, and Kenneth Rasinski},
+    booktitle = {The Psychology of Survey Response},
+    pages = {23--61},
+    year = {2000},
+    doi = {10.1017/CBO9780511819322.003},
+    publisher = {Cambridge University Press}
+}
+
+@Online{boyce_swing_states,
+    title = {Tracking the Swing States for Harris and Trump},
+    author = {Lily Boyce and Lazaro Gamio and Eli Murray and Alicia Parlapiano},
+    year = {2024},
+    url = {https://www.nytimes.com/interactive/2024/us/elections/presidential-election-swing-states.html},
+    note = {The New York Times}
+}
